<resources>
    <string name="app_name">Positioning App</string>
    <string name="location_permission_denied">Location permission denied, unable to detect beacons.</string>
    <string name="menu_beacons">Beacons</string>
    <string name="menu_positioning">Positioning</string>
    <string name="beacon_list_description">List of detected beacons</string>
    <string name="position_description">Current position based on the detected beacons</string>
    <string name="bluetooth_not_supported">This device does not support bluetooth, unable to detect beacons.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_enable">Enable</string>
    <string name="action_delete">Delete</string>
    <string name="action_enable_location">Enable location</string>
    <string name="title_enable_bluetooth">Enable bluetooth</string>
    <string name="title_enable_location">Enable location</string>
    <string name="message_bluetooth_required">Bluetooth has to be enabled to detect Bluetooth Low Energy (BLE) beacons.</string>
    <string name="message_location_required">Location has to be enabled to detect Bluetooth Low Energy (BLE) beacons.</string>
    <string name="message_bluetooth_location_required">Bluetooth and location have to be enabled to detect Bluetooth Low Energy (BLE) beacons.</string>
    <string name="empty_beacon_list">Looking for beacons…</string>
    <string name="coordinates">(x: %1$.0f, y: %2$.0f)</string>
    <string name="action_start_recording">Start recording</string>
    <string name="action_stop_recording">Stop recording</string>
    <string name="label_name">Name:</string>
    <string name="label_address">Address:</string>
    <string name="label_uuid">UUID:</string>
    <string name="label_major">Major:</string>
    <string name="label_minor">Minor:</string>
    <string name="label_rssi">RSSI:</string>
    <string name="label_tx_power">TX power:</string>
    <string name="label_distance">Distance:</string>
    <string name="label_distance_custom">Distance (custom):</string>
    <string name="label_trilateration">Trilateration:</string>
    <string name="label_weighted_centroid">Weighted centroid:</string>
    <string name="label_probability_based">Probability-based:</string>
    <string name="menu_settings">Settings</string>

    <!--  Settings strings  -->
    <string name="header_general">General</string>
    <string name="header_distance_estimation">Distance estimation</string>
    <string name="header_positioning">Positioning</string>
    <string name="title_record_predicted_coordinates">Record predicted coordinates</string>
    <string name="title_scan_period">Beacon scan period</string>
    <string name="title_record_fixed_number">Record fixed number of measurements</string>
    <string name="title_number_of_measurements">Number of measurements</string>
    <string name="title_distance_model">Distance model</string>
    <string name="title_path_loss_exponent">Path loss exponent</string>
    <string name="title_distance_method">RSSI processing method</string>
    <string name="title_dynamic_window">Dynamic measurements window size</string>
    <string name="title_window_size">Window size</string>
    <string name="title_positioning_method">Default positioning method</string>
    <string name="title_weight_exponent">Weight function exponent (g)</string>
    <string name="title_pdf_sharpness">Probability density function sharpness</string>
    <string name="title_allow_less_than_three_beacons">Allow less than three beacons</string>
    <string name="key_record_predicted_coordinates">record_predicted_coordinates</string>
    <string name="key_scan_period">scan_period</string>
    <string name="key_record_fixed_number">record_fixed_number</string>
    <string name="key_number_of_measurements">number_of_measurements</string>
    <string name="key_delete_measurements">delete_measurements</string>
    <string name="key_distance_model">distance_model</string>
    <string name="key_path_loss_exponent">path_loss_exponent</string>
    <string name="key_distance_method">distance_method</string>
    <string name="key_dynamic_window">dynamic_window</string>
    <string name="key_window_size">window_size</string>
    <string name="key_positioning_method">positioning_method</string>
    <string name="key_weight_exponent">weight_exponent</string>
    <string name="key_pdf_sharpness">pdf_sharpness</string>
    <string name="key_allow_less_than_three_beacons">allow_less_than_three_beacons</string>
    <string name="action_delete_measurements">Delete all measurements</string>

    <string name="action_checkpoint">Checkpoint</string>
    <string name="label_last_checkpoint">Last checkpoint:</string>
    <string name="title_delete_all_measurements">Delete all measurements?</string>
    <string name="message_delete_all_measurements">This will delete all beacon measurements, predicted positions and checkpoint timestamps.</string>
</resources>